# recipeAnalyzer

./: .env.example  .gitignore  AGENTS.md  README.md  codex-handoff.md  package-lock.json  package.json  初版需求.txt
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  env.py
backend/app/db/: database.py  schema.py
backend/app/schemas/: recipe.py
backend/app/services/: ai_log_service.py  analytics_service.py  birthday_surprise_service.py  database_browser_service.py  database_transfer_service.py  deepseek_service.py  excel_export_service.py  import_refine_service.py  import_service.py  ingredient_service.py  ingredient_visibility_service.py  library_context_service.py  managed_tag_service.py  ollama_service.py  pairing_service.py  recipe_service.py  refine_hash_service.py  search_service.py  (+3 more)
desktop/: README.md  build_desktop_signed.ps1
desktop/db_refiner/: README.md  build_exe.bat  recipe_db_refiner.py
desktop/db_tagger/: README.md  build_exe.bat  recipe_db_tagger.py
desktop/tauri_backend/: build_backend_sidecar.bat  build_sidecar.py  recipe_backend_sidecar.py
docs/: ProblemstoSolve.txt  PtS2.txt  PtS3.txt  architecture.md  nextsteps0421  refine-optimization-plan.md  user-manual.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: backfill_ingredients.py  create_latest_json.py  create_refine_ab_sample.py  generate_sample_excel.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
(+25 files in other folders)
