[package]
name = "recipe-analyzer"
version = "0.1.21"
description = "Local recipe library desktop shell"
authors = ["Atair-tech"]
edition = "2021"

[lib]
name = "recipe_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
