[package]
name = "recipe-analyzer"
version = "0.1.28"
description = "Local recipe library desktop shell"
authors = ["Atair-tech"]
edition = "2021"

[lib]
name = "recipe_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
